# tenrec

./: CLAUDE.md  README.md  pyproject.toml
.github/workflows/: publish.yml
agent_docs/: architecture.md  cli-reference.md  contributing.md  integrations.md  plugin-development.md  roadmap.md  testing.md
docs/: _sidebar.md  index.html
docs/plugins/: bytes.md  functions.md  xrefs.md
examples/: README.md  pyproject.toml
examples/plugin_a/: README.md  main.py  pyproject.toml
examples/plugins/: example_a.py
tenrec/: config.py  entrypoint.py
tenrec/plugins/: plugin_loader.py
tenrec/plugins/plugins/: bytes.py  functions.py  types.py
