[build-system]
requires = ["hatchling>=1.27"]
build-backend = "hatchling.build"

[project]
name = "PluginA"
version = "1.0.0"
description = "A sample plugin for the Tenrec framework."
readme = "README.md"
license = {text = "MIT"}
authors = [{name = "Axel Mierczuk"}]
requires-python = ">=3.10"
dependencies = [
    "tenrec",
]

[tool.uv]
package = true

[tool.hatch.build.targets.wheel]
packages = ["plugin"]

[project.entry-points."tenrec.plugins"]
plugin_a = "plugin.main:SamplePluginA"
plugin_b = "plugin.main:SamplePluginB"